[package]
name = "niva-components"
version = "0.1.1"
edition = "2021"
authors = ["shestakovvv <shestakovvvaleriy@gmail.com>"] # Your name and email
description = "Embassy undependent components" # Required
license = "MIT OR Apache-2.0"  # Specify your license (see SPDX identifiers)
repository = "https://github.com/shestakovvv/niva-components.git" # GitHub repository URL
# homepage = "https://yourwebsite.com" # Optional
# documentation = "https://docs.rs/your_crate" # Optional
# readme = "README.md"           # Path to your README file (optional but recommended)
# keywords = ["example", "crate"] # Tags to help users find your crate
# categories = ["category"]      # Choose from [available categories](https://crates.io/categories)

[dependencies]
defmt = "0.3"
num = { version = "0.4", default-features = false }


[features]
default = ["defmt"]
defmt = []